@@ -55,9 +55,6 @@ Perl Scripts:
 * user_list and user_list_short:
   If a user has both op and voice, only the op flag will be 1.
 
-* dcc_list
-  The address field is always 0.
-
 * add_user_list/sub_user_list/clear_user_list
   These functions do nothing.
 
